--- a/Account/src/main/resources/application.properties
+++ b/Account/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=Account
 server.port=8084
+spring.datasource.url=jdbc:postgresql://localhost:5432/stock
+spring.datasource.username=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+management.endpoints.web.exposure.include=*
