--- a/Order/pom.xml
+++ b/Order/pom.xml
@@ -11,8 +11,8 @@
     <groupId>com.meshal</groupId>
     <artifactId>Order</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>OrderStock</name>
-    <description>OrderStock</description>
+    <name>Order</name>
+    <description>Order microservice</description>
     <url/>
     <licenses>
         <license/>
@@ -39,6 +39,24 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot3</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
     </dependencies>
 
